# Collectorium

./: .cpanel.yml  .dockerignore  .gitattributes  .gitignore  .htaccess  .htaccess.sunucu  .pre-commit-config.yaml  .railwayignore  .renderignore  AEGIS_OPERATION_REPORT.md  AESTHETIC_AWAKENING_REPORT.md  AUDIT_COMPLETE_SUMMARY.md  CEO_VISUAL_DIRECTIVE.md  COLLECTORIUM_DEPLOYMENT_SORUN_GIDERME_REHBERI.txt  COLLECTORIUM_MASTER_DOCUMENTATION.md  COLLECTORIUM_OPERATIONS_USER_JOURNEYS.md  COLLECTORIUM_PROJE_ANALIZI_VE_DURUM_RAPORU.txt  COLLECTORIUM_TECHNICAL_DEEP_DIVE.md  COLLECTORIUM_TEKNIK_DETAY_ANALIZI.txt  COLLECTORIUM_USER_JOURNEYS_DEPLOYMENT.md  CONTRIBUTING.md  CPANEL_DEPLOYMENT_GUIDE.md  CPANEL_FORCE_HTTPS_AKTIFLESTIRME.md  DEPLOY_LOG.md  DOCUMENTATION_INDEX.md  GENESIS_OPERATION_REPORT.md  GOOGLE_OAUTH_SETUP.md  MIGRATION_SUMMARY.md  Makefile  PHOENIX_OPERATION_REPORT.md  PRODUCTION_READY_REPORT.md  PYTHONANYWHERE_DEPLOYMENT_GUIDE.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOY_GUIDE.md  README.md  RENAISSANCE_OPERATION_REPORT.md  RENDER_DEPLOYMENT_GUIDE.md  RUNBOOK.md  RUNBOOK_CPANEL.md  (+25 more)
.github/workflows/: deploy-cpanel.yml  tests.yml
accounts/: adapters.py  admin.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_birth_date_user_phone_address.py
cart/: cart.py  forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
catalog/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_brand_index.py  0003_add_category_data.py
collectorium/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
collectorium/settings/: __init__.py  base.py  dev.py  hosting.py  prod.py  pythonanywhere.py  railway.py  render.py  stage.py
core/: __init__.py  context_processors.py  health.py  tests.py  urls.py  views.py
core/templates/: alert.html  base.html  category-card.html  footer.html  header.html  home.html  list.html  product-card.html
deployment/pythonanywhere/: auto_reload.sh  pythonanywhere_deploy.sh  quick_commands.sh  update_deployment.sh
docs/: ARCHITECTURE.md  CATEGORY_IMAGES_GUIDE.md  CPANEL_GIT_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_RENDER.md  DEVELOPMENT.md  LEDGER.md  MIGRATION_TO_CPANEL.md  PAYMENTS_DESIGN.md  RUNBOOK.md  SEARCH_DISCOVERY_ANALYSIS.md  WEBHOOKS.md
fixtures/: categories.json  sample_data.json  seed.json
listings/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  tests.py  urls.py  views.py
listings/migrations/: 0001_initial.py  0002_favorite.py  0003_listing_attributes_indexes.py  0004_listing_location_indexes.py
messaging/: admin.py  contact_guard.py  forms.py  models.py  urls.py  views.py
messaging/migrations/: 0001_initial.py  0002_thread_models.py
migrate_logs/: A2Z_READINESS_REPORT.md  AUDIT_INDEX.md  MIGRATION_COMPLETE.md  RED_FLAGS_REPORT.md  arch_map.md  deps_audit.md  dryrun_plan.md  migration_audit.md  ops_audit.md  security_short_report.md  settings_audit.md  static_media_audit.md  url_perm_audit.md
moderation/: admin.py  forms.py  models.py  urls.py  views.py
moderation/migrations/: 0001_initial.py  0002_reporting_risk.py  (+1 more)
orders/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
payments/: admin.py  apps.py  models.py  services.py  urls.py  views.py
reviews/: admin.py  apps.py  models.py  signals.py
scripts/: backup_database.py  deploy_to_cpanel.py  fix_cpanel_database.py  format.sh  lint.sh  smoke_test.py  test_db_connection.py  test_email.py  verify_ssl_ready.py
search/: admin.py  forms.py  models.py  urls.py  views.py
stores/: admin.py  forms.py  models.py  urls.py  views.py
templates/: 403.html  404.html  500.html  base.html  home.html  listing_detail.html  marketplace.html
tests/: conftest.py  test_cart.py  test_health.py  test_listings.py  test_orders.py  test_stores.py  test_users.py
(+74 files in other folders)
